1.0.0
-----
 * Fix missing field for INDEX_STATUS in GossipInfo (CASSSIDECAR-195)
 * Add feature level permissions to Sidecar (CASSSIDECAR-193)
 * Sidecar schema initialization can be executed on multiple thread (CASSSIDECAR-200)
 * Make sidecar operations resilient to down Cassandra nodes (CASSSIDECAR-201)
 * Fix Cassandra instance not found error (CASSSIDECAR-192)
 * Implemented Schema Reporter for Integration with DataHub (CASSSIDECAR-191)
 * Add sidecar endpoint to retrieve stream stats (CASSSIDECAR-180)
 * Add sidecar endpoint to retrieve cassandra gossip health (CASSSIDECAR-173)
 * Fix SidecarSchema stuck at initialization due to ClusterLeaseTask scheduling (CASSSIDECAR-189)
 * Add RBAC Authorization support in Sidecar (CASSSIDECAR-161)
 * Standardize configuration for duration units (CASSSIDECAR-186)
 * Adds sidecar endpoint for node decommissioning operation (CASSANDRASC-151)
 * Rename field in ListCdcSegmentsResponse (CASSSIDECAR-184)
 * Ensure memory consistency from PeriodicTask executions and expose richer ScheduleDecision (CASSSIDECAR-181)
 * Refactor access to delegate methods to simplify (CASSSIDECAR-182)
 * Renaming InstancesConfig to InstancesMetadata (CASSSIDECAR-175)
 * Mechanism to have a reduced number of Sidecar instances run operations (CASSSIDECAR-174)
 * Adding support for CDC APIs into sidecar client (CASSSIDECAR-172)
 * Stopping Sidecar can take a long time (CASSSIDECAR-178)
 * Add support for operational job management of long-running node operations (CASSSIDECAR-150)
 * CDC directory not initialized properly in InstanceMetadata (CASSSIDECAR-171)
 * yaml configuration defaults to a file that doesn't exist (CASSSIDECAR-122)
 * Adding APIs required for CDC (CASSSIDECAR-158)
 * Add advanced driver settings to allow taking in password or certificates for Cassandra connection (CASSSIDECAR-159)
 * Add metric to report consistency check duration (CASSSIDECAR-165)
 * Add mTLS Authentication in Sidecar (CASSANDRASC-156)