@@ -18,7 +18,8 @@
 
 version=1.0-SNAPSHOT
 junitVersion=5.9.2
-vertxVersion=4.5.7
+vertxVersion=4.5.13
+nettyVersion=4.1.118.Final
 guavaVersion=27.0.1-jre
 slf4jVersion=1.7.36
 jacksonVersion=2.14.3
